# Email-sender

./: .gitignore  LICENSE  README.md  init.sh  pyproject.toml  run.sh
src/: mail.py
src/lau_project_mail/: __init__.py  exceptions.py  mail.py
